# custApp

./: .gitignore  convocation.xlsx  db.sqlite3  pyproject.toml  requirements.txt  test.py  test.xlsx
ApplicationTemplate/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
ApplicationTemplate/migrations/: 0001_initial.py  0002_applications_test.py  0003_remove_applications_test.py  0004_request_request_file.py  0005_alter_request_created_at.py  0006_request_approved_at.py  0007_request_date-time_request_guest_and_more.py  0008_rename_date-time_request_meeting_date_time.py  0009_request_request_type.py  0010_alter_request_application.py  0011_alter_request_applicant.py  0012_remove_request_host_department_request_host.py  0013_alter_request_created_at.py  0014_request_checkedin_at.py  0015_rename_checkedin_at_request_vistied_at_and_more.py  0016_request_expired_at.py  0017_request_guest_fcm_token.py  0018_remove_request_guest_fcm_token.py  0019_request_complain_department_head_and_more.py  0020_applications_application_type.py
CUSTApp/: admin.py  apps.py  authentication.py  decorators.py  models.py  serializers.py  urls.py  utils.py  views.py
CUSTApp/migrations/: 0001_initial.py  0002_rename_requested_application_applications_application_name_and_more.py  0003_request_employeeid_request_studentid_and_more.py  0004_remove_request_applicant_remove_request_application_and_more.py  0005_remove_request_applicant_remove_request_application_and_more.py  0006_program.py  0007_users_signature.py  0008_alter_users_picture.py  0009_alter_users_uu_id.py  0010_alter_users_email.py  0011_remove_users_dept_name_users_dept.py  0012_users_auth_method.py  0013_alter_users_term.py  0014_users_profile_completed.py  0015_users_guest_fcm_token.py  0016_users_program.py  0017_users_passport_number.py  0018_convocation.py  0019_users_convocation_users_secondary_email_and_more.py  0020_convocation_convocation_date.py  0021_remove_convocation_registration_form_link.py  0022_alter_users_signature.py  (+1 more)
CUSTApp/templates/: base.html  (+5 more)
GuestPass/: apps.py  models.py  serializers.py  urls.py  views.py
complaints/: serializers.py  urls.py  views.py
project/: settings.py  urls.py
user_requests/: apps.py  serializers.py  urls.py  views.py
(+79 files in other folders)
